# usb_pio

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
host-usb-side/: Cargo.toml
pio-side/: Cargo.toml
pio-side/.cargo/: config
pio-side/src/: main.rs  usb_pio.rs
