[package]
name = "pio-side"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
rp-pico = "0.9.0"
rp2040-hal = { version = "0.11.0", features = ["defmt", "rt"] }
usb-device = { version = "0.3.2", features = ["defmt"] }
